syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "inventory_domain.proto";

package com.lightbend.gsa.asdemo.inventory.view;

option go_package = "com/lightbend/gsa/asdemo/inventory/view";

message GetItemsByUserRequest {
  string user_id = 1;
}

message ItemForUser {
  string item_id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  string image_url = 5;
  bool tradable = 6;
  double gps_lat = 7;
  double gps_lon = 8;
  repeated string tags = 9;
  string trade_id = 10;
}

service ItemsByUser {
  rpc ProcessItemAdded(com.lightbend.gsa.asdemo.inventory.domain.ItemAdded) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc ProcessMarkedTradable(com.lightbend.gsa.asdemo.inventory.domain.MarkedTradable) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc ProcessMarkedNotTradable(com.lightbend.gsa.asdemo.inventory.domain.MarkedNotTradable) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc ProcessItemOwnerChanged(com.lightbend.gsa.asdemo.inventory.domain.ItemOwnerChanged) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc ProcessTradeStarted(com.lightbend.gsa.asdemo.inventory.domain.TradeStarted) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc ProcessTradeCancelled (com.lightbend.gsa.asdemo.inventory.domain.TradeCancelled) returns (ItemForUser) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ItemEntity";
    };
    option (akkaserverless.method).view.update = {
      table: "item"
      transform_updates: true
    };
  }

  rpc GetItemsByUser(GetItemsByUserRequest) returns (stream ItemForUser) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM item WHERE user_id = :user_id"
    };
    option (google.api.http) = {
      get: "/inventory/items-by-user/{user_id}"
    };
  }
}